--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /heat-cool/nexia.home.log*
+/heat-cool/nexia.thermostat.log*
 /heat-cool/parmFiles/accesstoken.json
 /heat-cool/parmFiles/*.persist
 /heat-cool/thermium.log*
